--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="maincontainer">
+
+ 
     <header>
         <div class="navbar">
 
@@ -38,25 +41,62 @@
         </div>
     </header>
 <section>
-<div class="imgbody">
-    
-    <img class="backimg" src="./public/71Q+c4-cnjL._SX3000_.jpeg" alt="images">
-<div class="contentitem">
-    <div class="disc">
-        <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="#">Click here to go to amazon.in</a></p>
 
-    </div>
+        <div class="imgbody">
+ 
+       <img class="backimg" src="./public/71Q+c4-cnjL._SX3000_.jpeg" alt="images">
+
+     <div class="contentitem">
+        <div class="discription">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="#">Click here to go to amazon.in</a></p>
+        </div> 
+        <div class="contentitem1">
+            <div class="childcontentitem1">
+                <div class="innerchildcontentitem1">
+                    <div class="title">Toys under $25</div>
+                    <div class="childcontentitem1logo">
+                        <img src="./public/Fuji_Desktop_Single_image_EBF_1x_v3._SY304_CB573698005_.jpeg" alt="">
+                    </div>
+                    <div class="button">see more</div>
+
+                </div>
+            </div>
+            <div class="childcontentitem1"><div class="innerchildcontentitem1">
+                <div class="innerchildcontentitem1">
+                    <div class="title">Deals in PCs</div>
+                    <div class="childcontentitem1logo">
+                        <img src="./public/Fuji_Desktop_Single_image_EBF_1x_v1._SY304_CB573698005_.jpeg" alt="">
+                    </div>
+                    <div class="button">see more</div>
+
+                </div>
+            </div></div>
+            <div class="childcontentitem1"><div class="innerchildcontentitem1">
+                <div class="innerchildcontentitem1">
+                    <div class="title">Deals in PCs</div>
+                    <div class="childcontentitem1item">
+                        <div class="list"><img src="./public/Fuji_Quad_Headset_1x._SY116_CB667159060_.jpeg" alt=""><p>keybord</p></div>
+                        <div class="list"><img src="./public/Fuji_Quad_Keyboard_1x._SY116_CB667159063_.jpeg" alt=""></div>
+                        <div class="list"><img src="./public/Fuji_Quad_Mouse_1x._SY116_CB667159063_.jpeg" alt=""></div>
+                        <div class="list"><img src="./public/Fuji_Quad_Chair_1x._SY116_CB667159060_.jpeg" alt=""></div>
+                    </div>
+                    <div class="button">see more</div>
+
+                </div>
+
+            </div></div>
+            <div class="childcontentitem1"><div class="innerchildcontentitem1">4</div></div>
+            <div class="childcontentitem1"><div class="innerchildcontentitem1">5</div></div>
+            <div class="childcontentitem1"><div class="innerchildcontentitem1">6</div></div>
+            <div class="childcontentitem1"><div class="innerchildcontentitem1">7</div></div>
+            <div class="childcontentitem1"><div class="innerchildcontentitem1">8</div></div>
+
+        </div>
+
+      </div> 
+</div>
 
 </div>
-</div>
-
-<!-- <div class="content">
-    
-    <div class="discription">
-        <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="#">Click here to go to amazon.in</a></p>
-    </div> -->
-</div>
-
 </section>
 
 
